--- a/usr/lib/linuxmint/mintSources/mintSources.glade
+++ b/usr/lib/linuxmint/mintSources/mintSources.glade
@@ -414,9 +414,9 @@
   </object>
   <object class="GtkAction" id="action1"/>
   <object class="GtkDialog" id="mirror_selection_dialog">
-    <property name="width_request">500</property>
     <property name="height_request">400</property>
     <property name="border_width">5</property>
+    <property name="title" translatable="yes">Select mirror</property>
     <property name="type_hint">normal</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox1">
@@ -427,7 +427,7 @@
           <object class="GtkScrolledWindow" id="scrolledwindow1">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">automatic</property>
+            <property name="hscrollbar_policy">never</property>
             <property name="vscrollbar_policy">automatic</property>
             <child>
               <object class="GtkTreeView" id="mirrors_treeview">
