--- a/usr/lib/linuxmint/mintSources/mintSources.glade
+++ b/usr/lib/linuxmint/mintSources/mintSources.glade
@@ -6,6 +6,7 @@
   <object class="GtkWindow" id="main_window">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Software Sources</property>
+    <property name="resizable">False</property>
     <property name="window_position">center</property>
     <child>
       <object class="GtkVBox" id="vbox1">
